# python-logging

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .python-version  .release-please-manifest.json  .repo-metadata.json  .trampolinerc  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  UPGRADING.md  mypy.ini  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  synth.metadata  synth.py
.github/: .OwlBot.lock.yaml  CODEOWNERS  blunderbuss.yml  sync-repo-settings.yaml
.github/workflows/: unittest.yml
.kokoro/: common_env_vars.cfg  environment_tests.sh  publish-docs.sh  release.sh  test-samples.sh
.kokoro/continuous/: common.cfg
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/performance/: test-performance.sh
.kokoro/presubmit/: common.cfg
.kokoro/release/: common.cfg
.kokoro/samples/: common.cfg
.librarian/: state.yaml
.librarian/generator-input/: .repo-metadata.json  librarian.py  noxfile.py  setup.py
docs/: auto-trace-span-extraction.rst  conf.py  direct-lib-usage.rst  handlers-structured-log.rst  index.rst  snippets.py  std-lib-integration.rst  stdlib-usage.rst  transport.rst  usage.rst  v2.rst  web-framework-integration.rst
google/: __init__.py
owl-bot-staging/v2/: noxfile.py  setup.py
samples/: list_logs.py  list_logs_test.py
samples/generated_samples/: logging_generated_logging_v2_config_service_v2_get_settings_sync.py  logging_v2_generated_config_service_v2_copy_log_entries_async.py  logging_v2_generated_config_service_v2_copy_log_entries_sync.py  logging_v2_generated_config_service_v2_create_bucket_async.py  logging_v2_generated_config_service_v2_create_bucket_async_async.py  logging_v2_generated_config_service_v2_create_bucket_async_sync.py  logging_v2_generated_config_service_v2_create_bucket_sync.py  logging_v2_generated_config_service_v2_create_exclusion_async.py  (+81 more)
samples/snippets/: README.rst  (+10 more)
testing/: constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt  constraints-3.9.txt
(+214 files in other folders)
